--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -8,7 +8,7 @@ load("//bzl:rules.bzl",
      # "build_tool",
      "compiler_module",
      "compiler_signature",
-     "ocaml_tools"
+     "ocaml_tools"  ## macro
 )
 # load("//lex:BUILD_RULES.bzl", "run_ocamllex")
 
@@ -262,7 +262,7 @@ compiler_module(
     struct = "//bytecomp:opnames_ml",
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
-    deps = ["//stdlib:Stdlib"]
+    stdlib_deps = ["//stdlib:Stdlib"]
 )
 
 ## moved to bytecode:opnames_ml
@@ -363,11 +363,13 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//stdlib:Stdlib.Sys",
-        "//stdlib:Stdlib.Printf",
         "//bytecomp:Bytesections",
         "//stdlib:Stdlib.Array",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Sys",
+        "//stdlib:Stdlib.Printf",
+    ]
 )
 
 compiler_module(
@@ -451,32 +453,33 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//stdlib:Stdlib.Sys",
-        "//bytecomp:Symtable",
-        "//middle_end:Symbol",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Printf",
-        "//middle_end:Printclambda",
-        "//utils:Misc",
-        "//stdlib:Stdlib.List",
-        "//middle_end:Linkage_name",
-        "//typing:Ident",
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Filename",
-        "//middle_end/flambda:Export_info",
-        "//stdlib:Stdlib.Digest",
-        "//middle_end:Compilation_unit",
         "//bytecomp:Bytesections",
-        "//utils:Binutils",
-        "//stdlib:Stdlib.Array",
-        "//stdlib:Stdlib.Arg",
-
+        "//bytecomp:Symtable",
         "//file_formats:Cmi_format_cmi",
         "//file_formats:Cmo_format_cmi",
         "//file_formats:Cmt_format_cmi",
         "//file_formats:Cmx_format_cmi",
         "//file_formats:Cmxs_format_cmi",
+        "//middle_end/flambda:Export_info",
+        "//middle_end:Compilation_unit",
+        "//middle_end:Linkage_name",
+        "//middle_end:Printclambda",
+        "//middle_end:Symbol",
+        "//typing:Ident",
+        "//utils:Binutils",
+        "//utils:Misc",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Array",
+        "//stdlib:Stdlib.Digest",
+        "//stdlib:Stdlib.Filename",
+        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Printf",
+        "//stdlib:Stdlib.String",
+        "//stdlib:Stdlib.Sys",
+    ]
 )
 
 compiler_module(
@@ -485,27 +488,29 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//typing:Untypeast",
-        "//typing:Stypes",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Printf",
-        "//parsing:Pprintast",
-        "//parsing:Location",
-        "//utils:Load_path",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Lexing",
-        "//stdlib:Stdlib.Format",
-        "//stdlib:Stdlib.Filename",
-        "//typing:Envaux",
-        "//stdlib:Stdlib.Digest",
         "//driver:Compmisc",
         "//file_formats:Cmt_format",
+        "//parsing:Location",
+        "//parsing:Pprintast",
         "//typing:Cmt2annot",
+        "//typing:Envaux",
+        "//typing:Stypes",
+        "//typing:Untypeast",
         "//utils:Clflags",
-        "//stdlib:Stdlib.Array",
-        "//stdlib:Stdlib.Arg",
+        "//utils:Load_path",
         # "//typing:Annot_cmi",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Array",
+        "//stdlib:Stdlib.Digest",
+        "//stdlib:Stdlib.Filename",
+        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Lexing",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Printf",
+        "//stdlib:Stdlib.String",
+    ]
 )
 
 compiler_module(
@@ -514,16 +519,18 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//stdlib:Stdlib.Sys",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Printf",
-        "//driver:Main_args",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Filename",
         "//driver:Compenv",
-        "//stdlib:Stdlib.Arg",
+        "//driver:Main_args",
         ":Ocamlcp_common"
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Filename",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Printf",
+        "//stdlib:Stdlib.String",
+        "//stdlib:Stdlib.Sys",
+    ]
 )
 
 compiler_module(
@@ -532,14 +539,7 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        # "//stdlib:Stdlib.Sys",
-        # "//stdlib:Stdlib.String",
-        # "//stdlib:Stdlib.Printf",
         "//driver:Main_args",
-        # "//stdlib:Stdlib.List",
-        # "//stdlib:Stdlib.Filename",
-        # "//driver:Compenv",
-        # "//stdlib:Stdlib.Arg",
     ],
 )
 
@@ -559,18 +559,20 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//stdlib:Stdlib.Sys",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Stack",
-        "//stdlib:Stdlib.Printf",
-        "//utils:Misc",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Filename",
         "//config:Config",
-        "//stdlib:Stdlib.Bytes",
-        "//stdlib:Stdlib.Array",
-        "//stdlib:Stdlib.Arg",
+        "//utils:Misc",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.Array",
+        "//stdlib:Stdlib.Bytes",
+        "//stdlib:Stdlib.Filename",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Printf",
+        "//stdlib:Stdlib.Stack",
+        "//stdlib:Stdlib.String",
+        "//stdlib:Stdlib.Sys",
+    ]
 )
 
 compiler_module(
@@ -579,13 +581,15 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//stdlib:Stdlib.Sys",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Filename",
         "//config:Config",
         "//utils:Ccomp",
-        "//stdlib:Stdlib.Array",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Array",
+        "//stdlib:Stdlib.Filename",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Sys",
+    ]
 )
 
 compiler_module(
@@ -596,14 +600,16 @@ compiler_module(
     deps   = [
         "//driver:Compenv",
         "//driver:Main_args",
+        ":Ocamlcp_common"
+    ],
+    stdlib_deps = [
         "//stdlib:Stdlib.Arg",
         "//stdlib:Stdlib.Filename",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Sys",
-        ":Ocamlcp_common"
-    ],
+    ]
 )
 
 compiler_module(
@@ -614,7 +620,10 @@ compiler_module(
     deps   = [
         "//parsing:Location",
         "//parsing:Parse",
-        # "//parsing:Parsetree_cmi",
+        "//utils:Warnings",
+    ],
+    # "//parsing:Parsetree_cmi",
+    stdlib_deps = [
         "//stdlib:Stdlib.Arg",
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.Bytes",
@@ -627,8 +636,7 @@ compiler_module(
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Sys",
-        "//utils:Warnings",
-    ],
+    ]
 )
 
 compiler_module(
@@ -637,12 +645,14 @@ compiler_module(
     opts = MODULE_OPTS,
     warnings = [w.MISSING_MLI],
     deps   = [
-        "//file_formats:Cmo_format_cmi",
-        "//stdlib:Stdlib.Arg",
-        "//stdlib:Stdlib.List",
         "//config:Config",
+        "//file_formats:Cmo_format_cmi",
         "//utils:Misc",
     ],
+    stdlib_deps = [
+        "//stdlib:Stdlib.Arg",
+        "//stdlib:Stdlib.List",
+    ]
 )
 
 compiler_module(
@@ -650,7 +660,7 @@ compiler_module(
     struct = "profiling.ml",
     sig    = "Profiling_cmi",
     opts = MODULE_OPTS,
-    deps   = [
+    stdlib_deps   = [
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Sys",
@@ -673,12 +683,14 @@ compiler_module(
     warnings = [w.MISSING_MLI],
     deps   = [
         "//bytecomp:Bytesections",
+        "//utils:Misc",
+    ],
+    stdlib_deps = [
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Sys",
-        "//utils:Misc",
-    ],
+    ]
 )
 
 ################
@@ -767,7 +779,7 @@ ocaml_tools(
 
 ################################################################
 load("@bazel_skylib//rules:build_test.bzl", "build_test")
-build_test(
+build_test( ## skylib macro, builds all targets listed
     name = "tools",
     targets = [
         # ":Caml_tex",
