--- a/.bazelrc
+++ b/.bazelrc
@@ -35,6 +35,9 @@ common:q --noshow_progress
 # common:q --ui_event_filters=-stdout
 # common:q --ui_event_filters=-stderr
 
+common:bep --build_event_json_file=bep.json
+common:bep --build_event_publish_all_actions
+
 build --incompatible_enable_cc_toolchain_resolution
 #build --toolchain_resolution_debug=.*
 #build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
