--- a/config/cc/BUILD.bazel
+++ b/config/cc/BUILD.bazel
@@ -8,5 +8,8 @@ bool_flag(
 )
 
 bool_flag(name = "verbose", build_setting_default = False,
+          tags = ["diagnostics", "verbosity"],
           visibility = ["//visibility:public"])
-config_setting(name = "verbose?", flag_values = {":verbose": "True"})
+config_setting(name = "verbose?",
+               tags = ["diagnostics", "verbosity"],
+               flag_values = {":verbose": "True"})
