--- a/config/ocaml/archive/BUILD.bazel
+++ b/config/ocaml/archive/BUILD.bazel
@@ -2,6 +2,9 @@ load("@bazel_skylib//rules:common_settings.bzl",
      "bool_flag", "string_setting")
 
 bool_flag(name = "verbose", build_setting_default = False,
+          tags = ["diagnostics", "verbosity"],
           visibility = ["//visibility:public"])
-config_setting(name = "verbose?", flag_values = {":verbose": "True"})
+config_setting(name = "verbose?",
+               tags = ["diagnostics", "verbosity"],
+               flag_values = {":verbose": "True"})
 
