--- a/config/ocaml/cc/asm/BUILD.bazel
+++ b/config/ocaml/cc/asm/BUILD.bazel
@@ -7,6 +7,9 @@ bool_flag(name = "keep", build_setting_default = False,
 config_setting(name = "keep?", flag_values = {":keep": "True"})
 
 bool_flag(name = "verbose", build_setting_default = False,
+          tags = ["diagnostics", "verbosity"],
           visibility = ["//visibility:public"])
-config_setting(name = "verbose?", flag_values = {":verbose": "True"})
+config_setting(name = "verbose?",
+               tags = ["diagnostics", "verbosity"],
+               flag_values = {":verbose": "True"})
 
